# webinar1.django

./: .gitignore  Makefile  baseline.md  pyproject.toml  readme.md
credentials/: dev.env  prod.env  test.env
dumps/: data.sql
santa_workshop/: manage.py
santa_workshop/children/: admin.py  apps.py  models.py
santa_workshop/children/migrations/: 0001_initial.py  0002_behaviorrecord.py
santa_workshop/children/utils/: matviews.py
santa_workshop/gifts/: apps.py  models.py
santa_workshop/gifts/migrations/: 0001_initial.py
santa_workshop/gifts/utils/: readonly.py
santa_workshop/holidays/: urls.py  views.py
santa_workshop/holidays/templates/: countdown.html
santa_workshop/santa_workshop/: asgi.py  routers.py  urls.py  wsgi.py
santa_workshop/santa_workshop/settings/: base.py
santa_workshop/staff/: admin.py  apps.py  models.py
santa_workshop/staff/migrations/: 0001_initial.py
